// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-iKKmqK fIIisB"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-iKKmqK fIIisB"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-iKKmqK fIIisB"
>
  <span
    className="sc-dIZBxk iRVLNE"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-iKKmqK fIIisB"
>
  <div
    className="sc-fOpBKL jGPJxZ"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-iKKmqK kTNgYq"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-iKKmqK ficQuu"
  size="small"
/>
`;
